--- a/CinemaManagementSystem/MainWindow.xaml
+++ b/CinemaManagementSystem/MainWindow.xaml
@@ -5,8 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CinemaManagementSystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Login" Height="300" Width="400" WindowStartupLocation="CenterScreen">
+    <Grid Background="#F5F5F5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <TextBlock Text="LOGIN" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,20,0,20" Foreground="Black"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
+            <TextBlock Text="Username" FontSize="14" Margin="10,5,10,0" Foreground="Black"/>
+            <TextBox x:Name="UsernameTextBox" Width="250" Padding="5" Margin="5,0,0,10"/>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
+            <TextBlock Text="Password" FontSize="14" Margin="10,5,10,0" Foreground="Black"/>
+            <PasswordBox x:Name="PasswordBox" Width="250" Padding="5" Margin="10,0,0,10"/>
+        </StackPanel>
+        <Button Grid.Row="3" Content="Login" Width="200" Height="40" FontSize="16" HorizontalAlignment="Center" Background="#0078D7" Foreground="White" Click="LoginButton_Click" VerticalAlignment="Center"/>
     </Grid>
 </Window>
