--- a/CinemaManagementSystem/MainWindow.xaml
+++ b/CinemaManagementSystem/MainWindow.xaml
@@ -5,20 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CinemaManagementSystem"
         mc:Ignorable="d"
-        Title="Login" Height="350" Width="400">
-    <Grid Margin="10">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
-            <TextBlock Text="Đăng Nhập" FontSize="20" FontWeight="Bold" Margin="0,0,0,20" TextAlignment="Center"/>
+         Title="Cinema Management System"
+        Height="600" Width="900"
+        WindowStartupLocation="CenterScreen">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Tên Đăng Nhập" Margin="0,0,0,5"/>
-            <TextBox x:Name="txtUsername" Margin="0,0,0,10" Padding="5"/>
+        <StackPanel Background="#2D2D30" Grid.Column="0">
+            <TextBlock Text="Cinema Manager" Foreground="White" FontSize="18"
+                       FontWeight="Bold" HorizontalAlignment="Center" Margin="0,20,0,20"/>
+            <Button Content="Dashboard" Margin="5" Height="40" Click="Dashboard_Click"/>
+            <Button Content="Manage Movies" Margin="5" Height="40" Click="ManageMovies_Click"/>
+            <Button Content="Manage Showtimes" Margin="5" Height="40" Click="ManageShowtimes_Click"/>
+            <Button Content="Manage Tickets" Margin="5" Height="40" Click="ManageTickets_Click"/>
+            <Button Content="Manage Customers" Margin="5" Height="40" Click="ManageCustomers_Click"/>
 
-            <TextBlock Text="Mật Khẩu" Margin="0,0,0,5"/>
-            <PasswordBox x:Name="txtPassword" Margin="0,0,0,20" Padding="5"/>
+            <Button Content="Manage Users" Margin="5" Height="40" Click="ManageUsers_Click" Background="CadetBlue" x:Name="btnManageUsers"/>
 
-            <Button x:Name="btnLogin" Content="Đăng Nhập" Width="100" Height="30" Click="btnLogin_Click"/>
-
-            <TextBlock x:Name="txtMessage" Foreground="Red" TextAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" MaxWidth="300"/>
+            <Button Content="Logout" Margin="5" Height="40" Click="Logout_Click" Background="#FF5555" Foreground="White"/>
         </StackPanel>
+
+        <ContentControl x:Name="MainContent" Grid.Column="1"/>
     </Grid>
 </Window>
