--- a/CinemaManagementSystem/UserControls/ManageShowtimesUserControl.xaml
+++ b/CinemaManagementSystem/UserControls/ManageShowtimesUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CinemaManagementSystem.UserControls.ManageMoviesUserControl"
+﻿<UserControl x:Class="CinemaManagementSystem.UserControls.ManageShowtimesUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,19 +13,19 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- DataGrid hiển thị Movies -->
-        <DataGrid x:Name="dataGridMovies"
+        <!-- DataGrid hiển thị Showtimes -->
+        <DataGrid x:Name="dataGridShowtimes"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
                   SelectionMode="Single"
-                  SelectionChanged="DataGridMovies_SelectionChanged"
+                  SelectionChanged="DataGridShowtimes_SelectionChanged"
                   Margin="0,0,0,10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding MovieId}" Width="Auto"/>
-                <DataGridTextColumn Header="Name" Binding="{Binding MovieName}" Width="*"/>
-                <DataGridTextColumn Header="Genre" Binding="{Binding Genre}" Width="*"/>
-                <DataGridTextColumn Header="Duration" Binding="{Binding Duration}" Width="Auto"/>
-                <DataGridTextColumn Header="Age Rating" Binding="{Binding AgeRating}" Width="Auto"/>
+                <DataGridTextColumn Header="ID" Binding="{Binding ShowtimeId}" Width="Auto"/>
+                <DataGridTextColumn Header="Movie ID" Binding="{Binding MovieId}" Width="Auto"/>
+                <DataGridTextColumn Header="Show Date" Binding="{Binding ShowDate}" Width="Auto"/>
+                <DataGridTextColumn Header="Show Time" Binding="{Binding ShowTime1}" Width="Auto"/>
+                <DataGridTextColumn Header="Room Name" Binding="{Binding RoomName}" Width="*" />
             </DataGrid.Columns>
         </DataGrid>
 
@@ -51,37 +51,36 @@
                 <!-- Row 1 -->
                 <StackPanel Orientation="Horizontal" Margin="0,5">
                     <StackPanel Margin="5">
-                        <TextBlock Text="Movie ID" />
-                        <TextBox x:Name="txtMovieID" Width="350"/>
+                        <TextBlock Text="Showtime ID" />
+                        <TextBox x:Name="txtShowtimeID" Width="350"/>
                     </StackPanel>
                     <StackPanel Margin="5">
-                        <TextBlock Text="Movie Name" />
-                        <TextBox x:Name="txtMovieName" Width="350"/>
+                        <TextBlock Text="Movie ID" />
+                        <TextBox x:Name="txtMovieID" Width="350"/>
                     </StackPanel>
                 </StackPanel>
 
                 <!-- Row 2 -->
                 <StackPanel Orientation="Horizontal" Margin="0,5">
                     <StackPanel Margin="5">
-                        <TextBlock Text="Genre" />
-                        <TextBox x:Name="txtGenre" Width="350"/>
+                        <TextBlock Text="Show Date (yyyy-MM-dd)" />
+                        <TextBox x:Name="txtShowDate" Width="350"/>
                     </StackPanel>
                     <StackPanel Margin="5">
-                        <TextBlock Text="Duration" />
-                        <TextBox x:Name="txtDuration" Width="350"/>
+                        <TextBlock Text="Show Time (HH:mm)" />
+                        <TextBox x:Name="txtShowTime" Width="350"/>
                     </StackPanel>
                 </StackPanel>
 
                 <!-- Row 3 -->
                 <StackPanel Orientation="Horizontal" Margin="0,5">
                     <StackPanel Margin="5">
-                        <TextBlock Text="Age Rating" />
-                        <TextBox x:Name="txtAgeRating" Width="350"/>
+                        <TextBlock Text="Room Name" />
+                        <TextBox x:Name="txtRoomName" Width="350"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
 
         </StackPanel>
-
     </Grid>
 </UserControl>
