--- a/CinemaManagementSystem/UserControls/ManageUsersUserControl.xaml
+++ b/CinemaManagementSystem/UserControls/ManageUsersUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CinemaManagementSystem.UserControls.ManageMoviesUserControl"
+﻿<UserControl x:Class="CinemaManagementSystem.UserControls.ManageUsersUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,19 +13,18 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- DataGrid hiển thị Movies -->
-        <DataGrid x:Name="dataGridMovies"
+        <!-- DataGrid hiển thị Users -->
+        <DataGrid x:Name="dataGridUsers"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
                   SelectionMode="Single"
-                  SelectionChanged="DataGridMovies_SelectionChanged"
+                  SelectionChanged="DataGridUsers_SelectionChanged"
                   Margin="0,0,0,10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding MovieId}" Width="Auto"/>
-                <DataGridTextColumn Header="Name" Binding="{Binding MovieName}" Width="*"/>
-                <DataGridTextColumn Header="Genre" Binding="{Binding Genre}" Width="*"/>
-                <DataGridTextColumn Header="Duration" Binding="{Binding Duration}" Width="*"/>
-                <DataGridTextColumn Header="Age Rating" Binding="{Binding AgeRating}" Width="*"/>
+                <DataGridTextColumn Header="ID" Binding="{Binding UserId}" Width="Auto"/>
+                <DataGridTextColumn Header="Username" Binding="{Binding Username}" Width="*"/>
+                <DataGridTextColumn Header="Password" Binding="{Binding Password}" Width="*"/>
+                <DataGridTextColumn Header="Role" Binding="{Binding Role}" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
 
@@ -51,32 +50,27 @@
                 <!-- Row 1 -->
                 <StackPanel Orientation="Horizontal" Margin="0,5">
                     <StackPanel Margin="5">
-                        <TextBlock Text="Movie ID" />
-                        <TextBox x:Name="txtMovieID" Width="350"/>
+                        <TextBlock Text="User ID" />
+                        <TextBox x:Name="txtUserID" Width="350"/>
                     </StackPanel>
                     <StackPanel Margin="5">
-                        <TextBlock Text="Movie Name" />
-                        <TextBox x:Name="txtMovieName" Width="350"/>
+                        <TextBlock Text="Username" />
+                        <TextBox x:Name="txtUsername" Width="350"/>
                     </StackPanel>
                 </StackPanel>
 
                 <!-- Row 2 -->
                 <StackPanel Orientation="Horizontal" Margin="0,5">
                     <StackPanel Margin="5">
-                        <TextBlock Text="Genre" />
-                        <TextBox x:Name="txtGenre" Width="350"/>
+                        <TextBlock Text="Password" />
+                        <TextBox x:Name="txtPassword" Width="350"/>
                     </StackPanel>
                     <StackPanel Margin="5">
-                        <TextBlock Text="Duration" />
-                        <TextBox x:Name="txtDuration" Width="350"/>
-                    </StackPanel>
-                </StackPanel>
-
-                <!-- Row 3 -->
-                <StackPanel Orientation="Horizontal" Margin="0,5">
-                    <StackPanel Margin="5">
-                        <TextBlock Text="Age Rating" />
-                        <TextBox x:Name="txtAgeRating" Width="350"/>
+                        <TextBlock Text="Role" />
+                        <ComboBox x:Name="cbRole" Width="350">
+                            <ComboBoxItem Content="Admin" />
+                            <ComboBoxItem Content="Nhân viên" />
+                        </ComboBox>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
